--- a/package.json
+++ b/package.json
@@ -349,6 +349,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
     "dev": "nodemon index.js"
+  },"engines":{
+      "node": "12.x",
+      "npm": "6.14.7"
   },
   "author": "",
   "license": "ISC"
