--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,6 @@
-./node_modules
+*/node_modules/**
+# Elastic Beanstalk Files
+.gitignore
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
