--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "proxy":"http://localhost:3000",
-  "homepage":"http://localhost:3002",
+  "proxy": "http://localhost:3000",
+  "homepage": "http://localhost:3002",
   "description": "",
   "main": "index.js",
   "dependencies": {
@@ -269,6 +269,7 @@
     "random-bytes": "^1.0.0",
     "range-parser": "^1.2.1",
     "raw-body": "^2.5.1",
+    "react-scripts": "^4.0.3",
     "readable-stream": "^2.3.7",
     "readdirp": "^3.6.0",
     "retry-as-promised": "^6.1.0",
